# raylib_android

./: .gitignore  README.md
libs/raymob/: CMakeLists.txt  display.c  helper.c  raymob.h  sensor.c  soft_keyboard.c  vibrator.c
scripts/: adb_debug.sh  build_apk.sh  clean.sh  find_tools.sh  install_prereqs.sh  logcat.sh  serve_apk.py  serve_apk.sh
src/: CMakeLists.txt  main.cpp
src/AndroidEngine/: crash_handler.cpp  crash_handler.h
src/Core/: Application.cpp  Application.h  GameLoop.cpp  GameLoop.h  Platform.cpp  Platform.h  Screen.h
src/Game/: Components.h  Entities.cpp  Entities.h  Logic.cpp  Logic.h
src/Screens/: Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  Splash.cpp  Splash.h
src/Systems/: Audio.cpp  Audio.h  Input.cpp  Input.h  Rendering.cpp  Rendering.h  UI.cpp  UI.h
src/app/: build.gradle  settings.gradle
src/app/src/main/: AndroidManifest.xml
src/app/src/main/java/com/raylib/android/: DisplayManager.java  NativeLoader.java  SoftKeyboard.java
